updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a former Chef and new student to web development</p>
+      <h1>Where are you from?</h1>
+      <p>I grew up in ND, but I've lived in MPLS for 15 years now!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to cook, play the ukulele, read, hike and travel</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything that would pay me to travel</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Minneapolis</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It seems like a fun and interesting new career</p>
     </section>
 
     <footer id="footer">
